--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -264,6 +264,13 @@ header {
                 }
               }
             }
+            &:nth-child(5), &:nth-child(6), &:nth-child(7), &:nth-child(8) {
+              > a {
+                &:after {
+                  border-width: 0;
+                }
+              }
+            }
           }
           .image-text {
             display: flex;
