--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -61,7 +61,7 @@ section {
 @media screen and (max-width: 991px) {
   #fz_product_list_hero_sec .product_list_hero .product_list_hero_title {
     padding: 100px 0px 20px 0px;
-    line-height: 54px;
+    line-height: 42px;
     font-size: 36px;
   }
 }
@@ -164,7 +164,7 @@ section {
 }
 @media screen and (max-width: 991px) {
   #fz_product_list_feature .product_list_feature_head h3 {
-    font-size: 100px;
+    font-size: 50px;
   }
 }
 #fz_product_list_feature .product_list_feature_head h4 {
@@ -177,7 +177,7 @@ section {
 }
 @media screen and (max-width: 991px) {
   #fz_product_list_feature .product_list_feature_head h4 {
-    font-size: 94px;
+    font-size: 60px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards {
@@ -189,6 +189,11 @@ section {
   overflow: hidden;
   padding: 50px 0px 96px;
 }
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_cards {
+    display: block;
+  }
+}
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card {
   position: relative;
   border: 1px solid rgba(255, 255, 255, 0.0784313725);
@@ -196,6 +201,11 @@ section {
   box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.0784313725) inset;
   padding: 1px;
   overflow: hidden;
+}
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card {
+    margin: 30px;
+  }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card:nth-child(4) {
   top: -58%;
@@ -254,6 +264,11 @@ section {
   top: 0%;
   right: 0%;
 }
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img {
+    width: 80px;
+  }
+}
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont h4 {
   font-size: 36px;
   font-weight: 600;
@@ -264,6 +279,12 @@ section {
   padding-bottom: 16px;
   padding-right: 46px;
   margin: 0;
+}
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont h4 {
+    font-size: 22px;
+    line-height: 28px;
+  }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont p {
   font-size: 16px;
@@ -297,7 +318,7 @@ section {
 @media (max-width: 991px) {
   .fz_features_sec h2 {
     text-align: center;
-    font-size: 35px;
+    font-size: 26px;
   }
 }
 .fz_features_sec .fz_features_heading_para {
@@ -309,6 +330,7 @@ section {
 @media (max-width: 991px) {
   .fz_features_sec .fz_features_heading_para {
     text-align: center;
+    font-size: 16px;
   }
 }
 .fz_features_sec button {
@@ -351,6 +373,9 @@ section {
 @media (max-width: 991px) {
   .fz_features_sec button .fz_feature_tab_heading h4 {
     padding-top: 10px;
+    padding-left: 0px;
+    font-size: 20px;
+    text-align: center;
   }
 }
 .fz_features_sec button .fz_feature_para {
@@ -453,7 +478,7 @@ section {
 @media (max-width: 991px) {
   .fz_ai_enhance_sec .fz_ai_enhance_text h2 {
     text-align: center;
-    font-size: 35px;
+    font-size: 26px;
     padding-bottom: 20px;
   }
 }
@@ -537,6 +562,16 @@ section {
   padding-right: 80px;
   padding-left: 0px;
 }
+@media screen and (max-width: 991px) {
+  .fz_ai_enhance_sec .fz_enhance_col.left-space {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 991px) {
+  .fz_ai_enhance_sec .fz_enhance_col {
+    padding: 0;
+  }
+}
 .fz_ai_enhance_sec .fz_enhance_img_col {
   display: flex;
   justify-content: end;
@@ -582,6 +617,7 @@ section {
 @media (max-width: 991px) {
   .fz_get_in_touch .get_in_touch {
     padding: 20px;
+    margin: 60px 0px 0px 0px;
     border-left: 10px solid #3eab90;
     border-right: 10px solid #2e5858;
   }
@@ -669,6 +705,8 @@ section {
 @media (max-width: 991px) {
   .fz_get_in_touch .get_in_touch .get_touch_in_content h2 {
     text-align: center;
+    font-size: 30px;
+    margin-top: 100px;
   }
 }
 .fz_get_in_touch .get_in_touch .get_touch_in_content p {
@@ -800,8 +838,8 @@ section {
 }
 @media screen and (max-width: 991px) {
   #fz_product_range h2 {
-    font-size: 40px;
-    line-height: 45px;
+    font-size: 26px;
+    line-height: 34px;
     text-align: center;
   }
 }
@@ -991,11 +1029,12 @@ section {
   justify-content: space-between;
   height: 100vh;
 }
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 991px) {
   #fin_bankz_sec .fin_bankz {
     height: auto;
     flex-direction: column;
     gap: 24px;
+    padding-bottom: 20px;
   }
 }
 #fin_bankz_sec .fin_bankz .fin_bankz_content {
@@ -1004,7 +1043,8 @@ section {
 }
 @media only screen and (max-width: 991px) {
   #fin_bankz_sec .fin_bankz .fin_bankz_content {
-    margin-top: 50px;
+    margin: 50px 0px 0px 0px;
+    width: 100%;
   }
 }
 #fin_bankz_sec .fin_bankz .fin_bankz_content .fin_bankz_title {
@@ -1043,6 +1083,11 @@ section {
   font-weight: 600;
   color: rgba(0, 178, 177, 0.8);
   padding-bottom: 2px;
+}
+@media screen and (max-width: 1200px) {
+  #fin_bankz_sec .fin_bankz .fin_bankz_content .fin_bankz_subtitle {
+    font-size: 36px;
+  }
 }
 #fin_bankz_sec .fin_bankz .fin_bankz_content .fin_bankz_desc {
   font-size: 20px;
@@ -1144,6 +1189,12 @@ section {
 #fin_bankz_sec .fin_bankz .fin_bankz_img {
   position: relative;
 }
+@media screen and (max-width: 991px) {
+  #fin_bankz_sec .fin_bankz .fin_bankz_img {
+    width: 70%;
+    margin: 20px auto;
+  }
+}
 #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product {
   width: 625px;
   height: 625px;
@@ -1155,8 +1206,7 @@ section {
 }
 @media screen and (max-width: 991px) {
   #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product {
-    width: 70%;
-    margin: 0 auto;
+    height: 100%;
   }
 }
 #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product::before {
@@ -1173,6 +1223,16 @@ section {
   transform: translate3d(0, 0, 0);
   z-index: -1;
   pointer-events: none;
+}
+@media screen and (max-width: 991px) {
+  #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product::before {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 991px) {
+  #fin_bankz_sec .fz_reverse {
+    flex-direction: column-reverse;
+  }
 }
 
 .finbankz_heading h3 {
