--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -46,7 +46,7 @@ body {
 
             @media screen and (max-width: 991px) {
               padding: 100px 0px 20px 0px;
-              line-height: 54px;
+              line-height: 42px;
               font-size: 36px;
             }
         }
@@ -87,7 +87,7 @@ body {
             margin-bottom: 0px;
 
             @media screen and (max-width: 991px) {
-              font-size: 100px;
+              font-size: 50px;
             }
         }
 
@@ -104,7 +104,7 @@ body {
 
                 
             @media screen and (max-width: 991px) {
-              font-size: 94px;
+              font-size: 60px;
             }
         }
     }
@@ -118,6 +118,10 @@ body {
         grid-auto-flow: dense;
         overflow: hidden;
         padding: 50px 0px 96px;
+
+        @media screen and (max-width: 991px) {
+          display: block;
+        }
         .product_list_feature_card {
             position: relative;
             border: 1px solid #ffffff14;
@@ -125,6 +129,10 @@ body {
             box-shadow: 0px 1px 0px 0px #ffffff14 inset;
             padding: 1px;
             overflow: hidden;
+            @media screen and (max-width: 991px) {
+              margin: 30px;
+            }
+
             &:nth-child(4) {
                 top: -58%;
                 left: 0;
@@ -201,6 +209,9 @@ body {
                     position: absolute;
                     top: 0%;
                     right: 0%;
+                    @media screen and (max-width: 991px) {
+                      width:80px;
+                    }
                 }
 
                 h4 {
@@ -213,6 +224,10 @@ body {
                     padding-bottom: 16px;
                     padding-right: 46px;
                     margin: 0;
+                    @media screen and (max-width: 991px) {
+                      font-size: 22px;
+                      line-height: 28px;
+                    }
                 }
 
                 p {
@@ -245,7 +260,7 @@ body {
       margin-bottom: 16px;
       @media (max-width: 991px) {
           text-align: center;
-          font-size: 35px;
+          font-size: 26px;
          }
   }
   .fz_features_heading_para{
@@ -255,6 +270,7 @@ body {
       margin-bottom: 45px;
       @media (max-width: 991px) {
           text-align: center;
+          font-size: 16px;
          }
   }
   button{
@@ -292,7 +308,10 @@ body {
               color: $white;
               text-align: left;
               @media (max-width: 991px) {
-                  padding-top: 10px;
+                padding-top: 10px;
+                padding-left: 0px;
+                font-size: 20px;
+                text-align: center;
               }
           }
       }
@@ -382,7 +401,7 @@ body {
           margin-bottom: 16px;
           @media (max-width: 991px) {
               text-align: center;
-              font-size: 35px;
+              font-size: 26px;
               padding-bottom: 20px;
              }
       }
@@ -460,6 +479,14 @@ body {
       &.left-space{
         padding-right: 80px;
         padding-left: 0px;
+        
+      @media screen and (max-width: 991px) {
+        padding:0;
+ }
+      }
+
+      @media screen and (max-width: 991px) {
+             padding:0;
       }
   }
   .fz_enhance_img_col{
@@ -501,6 +528,7 @@ body {
       }
       @media (max-width: 991px) {
           padding: 20px;
+          margin: 60px 0px 0px 0px;
           border-left: 10px solid $primary-color;
           border-right: 10px solid #2e5858;
       }
@@ -583,6 +611,8 @@ body {
               font-weight: 300;
               @media (max-width: 991px) {
                  text-align: center;
+                 font-size: 30px;
+                 margin-top: 100px;
                 }
           }
           p{
@@ -640,8 +670,8 @@ body {
         line-height: 68px;
         font-weight: 400;
         @media screen and (max-width:991px) {
-            font-size: 40px;
-            line-height: 45px;
+            font-size: 26px;
+            line-height: 34px;
             text-align: center;
         }
     }
@@ -764,16 +794,19 @@ body {
           align-items: center;
           justify-content: space-between;
           height: 100vh;
-          @media only screen and (max-width: 992px) {
+         
+          @media only screen and (max-width: 991px) {
             height: auto;
             flex-direction: column;
             gap: 24px;
+            padding-bottom: 20px;  
           }
           .fin_bankz_content {
             position: relative;
             width: 620px;
        @media only screen and (max-width: 991px) {
-              margin-top: 50px;
+              margin: 50px 0px 0px 0px;
+              width:100%;
            }
           
             // @media only screen and (max-width: 991px) {
@@ -814,6 +847,9 @@ body {
               font-weight: 600;
               color: #00B2B1CC;
               padding-bottom: 2px;
+              @media screen and (max-width: 1200px) {
+               font-size: 36px;
+              }
             }
   
             .fin_bankz_desc {
@@ -848,6 +884,10 @@ body {
           }
           .fin_bankz_img {
             position: relative;
+            @media screen and (max-width: 991px) {
+              width:70%;
+              margin: 20px auto;
+            }
             .finbankz-product {
                 width: 625px;
                 height: 625px;
@@ -855,8 +895,7 @@ body {
                   width:100%;
                 }
                 @media screen and (max-width: 991px) {
-                  width:70%;
-                  margin: 0 auto;
+                  height: 100%;
                 }
                 &::before {
                 content: "";
@@ -872,10 +911,19 @@ body {
                 transform: translate3d(0, 0, 0);
                 z-index: -1;
                 pointer-events: none;
+
+                @media screen and (max-width: 991px) {
+                     width:100%;
+                }
                 }
             }
           }
         }
+        @media screen and (max-width: 991px) {
+        .fz_reverse{
+          flex-direction: column-reverse;
+        }
+      }
   }
 .finbankz_heading{
     h3{
