--- a/assets/css/sass/contact_us.scss
+++ b/assets/css/sass/contact_us.scss
@@ -46,6 +46,7 @@
             margin-bottom: 122px;
             @media screen and (max-width: 991px) {
                 width: 100%;
+                margin-bottom: 40px;
             }
             .form_group {
                 position: relative;
