--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -131,7 +131,6 @@
 }
 @media screen and (max-width: 991px) {
   .footer_section .fz_footer_container .footer_list_link .links-group h4 {
-    line-height: 10px;
     margin: 25px 0px 0px 0px;
   }
 }
@@ -170,6 +169,7 @@
 @media screen and (max-width: 991px) {
   .footer_section .fz_footer_container .subscribe {
     margin: 30px 0px;
+    width: 100%;
   }
 }
 .footer_section .fz_footer_container .subscribe p {
