--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -225,11 +225,6 @@ header .navbar-expand-lg .navbar-nav > li .submenu a {
 header .navbar-expand-lg .navbar-nav > li .submenu li.active-submenu > a {
   background: rgba(0, 75, 75, 0.5);
 }
-@media screen and (max-width: 991px) {
-  header .navbar-expand-lg .navbar-nav > li .submenu li > a {
-    pointer-events: none;
-  }
-}
 header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover {
   position: relative;
 }
@@ -254,6 +249,11 @@ header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover:after {
 }
 header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(5) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(6) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(7) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(8) > a:after {
   border-width: 0;
+}
+@media screen and (max-width: 991px) {
+  header .navbar-expand-lg .navbar-nav > li .submenu > li > a {
+    pointer-events: none;
+  }
 }
 header .navbar-expand-lg .navbar-nav > li .submenu .image-text {
   display: flex;
