--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -286,11 +286,6 @@ header .navbar-expand-lg .navbar-nav > li .submenu a {
 header .navbar-expand-lg .navbar-nav > li .submenu li.active-submenu > a {
   background: rgba(0, 75, 75, 0.5);
 }
-@media screen and (max-width: 991px) {
-  header .navbar-expand-lg .navbar-nav > li .submenu li > a {
-    pointer-events: none;
-  }
-}
 header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover {
   position: relative;
 }
@@ -315,6 +310,11 @@ header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover:after {
 }
 header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(5) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(6) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(7) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(8) > a:after {
   border-width: 0;
+}
+@media screen and (max-width: 991px) {
+  header .navbar-expand-lg .navbar-nav > li .submenu > li > a {
+    pointer-events: none;
+  }
 }
 header .navbar-expand-lg .navbar-nav > li .submenu .image-text {
   display: flex;
@@ -3994,7 +3994,6 @@ div#faq-animate svg {
 }
 @media screen and (max-width: 991px) {
   .footer_section .fz_footer_container .footer_list_link .links-group h4 {
-    line-height: 10px;
     margin: 25px 0px 0px 0px;
   }
 }
@@ -4033,6 +4032,7 @@ div#faq-animate svg {
 @media screen and (max-width: 991px) {
   .footer_section .fz_footer_container .subscribe {
     margin: 30px 0px;
+    width: 100%;
   }
 }
 .footer_section .fz_footer_container .subscribe p {
