--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -122,7 +122,6 @@
       font-size: 18px;
       line-height: 30px;
       @media screen and (max-width: 991px) {
-        line-height: 10px;
         margin: 25px 0px 0px 0px;
        }
     }
@@ -160,6 +159,7 @@ width:250px;
   }
   @media screen and (max-width: 991px) {
     margin: 30px 0px;
+    width: 100%;
    }
 p{
   font-size: 18px;
