--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -182,6 +182,10 @@ p{
 }
 @media screen and (max-width: 991px) {
     margin: 0;
+    width: 400px;
+   }
+   @media screen and (max-width: 767px) {
+    width: 100%;
    }
   input {
     width: 100%;
