--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -86,6 +86,10 @@ body {
             margin-top: 96px;
             margin-bottom: 0px;
 
+            @media (min-width: 992px) and (max-width: 1199px) {
+                font-size: 100px;
+           }
+
             @media screen and (max-width: 991px) {
               font-size: 50px;
             }
@@ -102,6 +106,9 @@ body {
                 0 3px 5px #38fdb510, 0 1px 4px #38fdb50f, 0 0px 8px #38fdb50e,
                 0 0px 10px #38fdb500;
 
+                @media (min-width: 992px) and (max-width: 1199px) {
+                  font-size: 80px;
+             }
                 
             @media screen and (max-width: 991px) {
               font-size: 60px;
@@ -205,25 +212,34 @@ body {
                 padding: 72px 48px;
                 background: linear-gradient(216deg, rgba(1, 86, 86, 0.86) 0%, rgba(0, 53, 53, 0.85) 30%, rgb(0 17 17 / 83%) 70%);
                 // background: linear-gradient(0deg, rgb(0, 29, 31) 0%, rgba(0, 23, 21, 0.8) 90%);
+                @media screen and (max-width: 1199px) {
+                  padding: 72px 48px 40px;
+                }
                 img {
                     position: absolute;
                     top: 0%;
                     right: 0%;
-                    @media screen and (max-width: 991px) {
+                    @media screen and (max-width: 1199px) {
                       width:80px;
                     }
                 }
 
                 h4 {
-                    font-size: 36px;
-                    font-weight: 600;
-                    line-height: 50.4px;
-                    letter-spacing: 1px;
-                    text-align: left;
-                    color: $white;
-                    padding-bottom: 16px;
-                    padding-right: 46px;
-                    margin: 0;
+                  font-size: 28px;
+                  font-weight: 600;
+                  line-height: 36px;
+                  /* letter-spacing: 1px; */
+                  text-align: left;
+                  color: #ffffff;
+                  padding-bottom: 16px;
+                  padding-right: 42px;
+                  margin: 0;
+
+                    @media (min-width: 992px) and (max-width: 1199px) {
+                      font-size: 18px;
+                      padding-right: 16px;
+                      line-height: 24px;
+                 }
                     @media screen and (max-width: 991px) {
                       font-size: 22px;
                       line-height: 28px;
@@ -238,6 +254,12 @@ body {
                     text-align: left;
                     color: #ffffffa3;
                     margin: 0;
+                    @media (min-width: 992px) and (max-width: 1199px) {
+                      font-size: 14px;
+                      line-height: 20px;
+                     
+                 }
+
                 }
             }
         }
@@ -307,6 +329,9 @@ body {
               font-size: 24px;
               color: $white;
               text-align: left;
+              @media (min-width: 992px) and (max-width: 1199px) {
+              font-size: 18px;
+           }
               @media (max-width: 991px) {
                 padding-top: 10px;
                 padding-left: 0px;
@@ -318,6 +343,11 @@ body {
       .fz_feature_para{
           text-align: left;
           color: $white;
+
+          @media (min-width: 992px) and (max-width: 1199px) {
+            font-size: 14px;
+          
+       }
           @media (max-width: 991px) {
               text-align: center;
              }
@@ -391,6 +421,9 @@ body {
       img{
           width: 100%;
           height: 100%;
+          @media screen and (min-width: 992px) and (max-width: 1199px) {
+             height:auto;
+          }
       }
   }
   .fz_ai_enhance_text{
@@ -399,6 +432,11 @@ body {
           font-size: 48px;
           font-weight: 600;
           margin-bottom: 16px;
+          @media screen and (min-width: 992px) and (max-width: 1199px) {
+              font-size: 26px;
+              padding-bottom: 0px;
+              margin-bottom: 10px;
+         }
           @media (max-width: 991px) {
               text-align: center;
               font-size: 26px;
@@ -420,6 +458,9 @@ body {
           font-size:16px;
           color: $white;
           font-weight: 300;
+          @media screen and (min-width: 992px) and (max-width: 1199px) {
+             font-size: 14px;
+       }
           @media (max-width: 991px) {
               text-align: center;
           }
@@ -528,7 +569,7 @@ body {
       }
       @media (max-width: 991px) {
           padding: 20px;
-          margin: 60px 0px 0px 0px;
+          margin: 60px 0px 0px;
           border-left: 10px solid $primary-color;
           border-right: 10px solid #2e5858;
       }
@@ -578,7 +619,7 @@ body {
           //   }
           @media (max-width: 991px) {
               top: 51%;
-              left: 61%;
+              left: 50%;
             }
           @media (max-width: 430px) {
               top: 36%;
@@ -669,6 +710,11 @@ body {
         font-size: 48px;
         line-height: 68px;
         font-weight: 400;
+
+        @media (min-width: 992px) and (max-width: 1199px) {
+             font-size: 30px;
+             text-align: center;
+       }
         @media screen and (max-width:991px) {
             font-size: 26px;
             line-height: 34px;
@@ -691,12 +737,18 @@ body {
             background: rgba(0, 30, 32, 0.8);
             background:linear-gradient(216deg, rgba(1, 86, 86, 0.86) 0%, rgba(0, 53, 53, 0.85) 30%, rgba(0, 17, 17, 0.83) 70%);
             margin-bottom: 32px;
+            @media screen and (max-width:1199px) {
+              margin-bottom: 0px;
+           }
             h3 {
                 color: $white;
                 font-size: 24px;
                 line-height: 24px;
                 font-weight: 600;;
                 margin: 20px 0 0;
+                @media screen and (max-width:1199px) {
+                 font-size: 20px;
+              }
             }
             p {
                 color: #838383;
@@ -704,6 +756,11 @@ body {
                 line-height: 22px;
                 font-weight: 400;
                 margin: 20px 0;
+                @media screen and (max-width:1199px) {
+                  font-size: 14px;
+                  line-height: 20px;
+                  margin: 10px 0px;
+               }
             }
             .cmn-btn {
                 margin: 0 auto;
