--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -167,21 +167,14 @@ header .navbar-expand-lg .navbar-nav > li a.nav-link:hover:after {
   transform: scaleX(1);
 }
 header .navbar-expand-lg .navbar-nav > li a.nav-link.active {
-  font-weight: 400;
   color: #f7c35f;
-  position: relative;
-  display: block;
-  text-align: center;
   border-bottom: 2px solid transparent;
   border-image: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(0, 178, 177), rgba(0, 0, 0, 0));
   border-image-slice: 1;
-  width: 100%;
 }
 @media screen and (max-width: 991px) {
   header .navbar-expand-lg .navbar-nav > li a.nav-link.active {
     border-bottom: none;
-    transform: scale(none);
-    text-align: left;
   }
 }
 @media screen and (max-width: 991px) {
@@ -212,6 +205,10 @@ header .navbar-expand-lg .navbar-nav > li .inner-submenu li a, header .navbar-ex
 }
 header .navbar-expand-lg .navbar-nav > li .inner-submenu li a:hover, header .navbar-expand-lg .navbar-nav > li .submenu-wrapper li a:hover {
   background: rgba(0, 75, 75, 0.5);
+}
+header .navbar-expand-lg .navbar-nav > li .inner-submenu li a:hover .fz_header_svg, header .navbar-expand-lg .navbar-nav > li .submenu-wrapper li a:hover .fz_header_svg {
+  background: #04a5a7;
+  border: 1px solid transparent;
 }
 header .navbar-expand-lg .navbar-nav > li .inner-submenu li a:hover .fz_text h3, header .navbar-expand-lg .navbar-nav > li .submenu-wrapper li a:hover .fz_text h3 {
   color: #04a5a7;
@@ -307,7 +304,7 @@ header .navbar-expand-lg .navbar-nav > li .submenu .image-text .fz_text h3 {
 header .navbar-expand-lg .navbar-nav > li .submenu .image-text .fz_text p {
   font-size: 12px;
   margin: 0;
-  color: #DDDEDD;
+  color: #8d8d8d;
 }
 header .navbar-expand-lg .navbar-nav > li .inner-submenu {
   background: rgba(6, 54, 50, 0.1);
@@ -323,9 +320,11 @@ header .navbar-expand-lg .navbar-nav > li .inner-submenu a {
   width: 100%;
   display: flex;
   flex-direction: column;
+  border-left: 1px solid transparent;
 }
 header .navbar-expand-lg .navbar-nav > li .inner-submenu a:hover {
   background: rgba(0, 75, 75, 0.5);
+  border-left: 1px solid rgba(1, 251, 251, 0.202);
 }
 header .navbar-expand-lg .navbar-nav > li .inner-submenu a:after {
   border-width: unset !important;
@@ -340,7 +339,7 @@ header .navbar-expand-lg .navbar-nav > li .inner-submenu a h3 {
 header .navbar-expand-lg .navbar-nav > li .inner-submenu a p {
   font-size: 12px;
   margin: 0;
-  color: #DDDEDD;
+  color: #8d8d8d;
 }
 @media screen and (max-width: 991px) {
   header .fz_sigin {
