--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -170,25 +170,16 @@ header {
               transform: scaleX(1);
             }
           }
-        }
-        a.nav-link.active {
-            font-weight: 400;
+          &.active {
             color: $secondary-color;
-            position: relative;
-            display: block;
-              text-align:center;
-              border-bottom: 2px solid transparent;
-              border-image: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgba(0, 178, 177, 1), rgba(0, 0, 0, 0));
-              border-image-slice: 1;
-              width:100%;
-              
-             
-                @media screen and (max-width: 991px) {
-                    border-bottom: none;
-                    transform: scale(none);
-                    text-align: left;
-                }
+            border-bottom: 2px solid transparent;
+            border-image: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgba(0, 178, 177, 1), rgba(0, 0, 0, 0));
+            border-image-slice: 1;
+            @media screen and (max-width: 991px) {
+              border-bottom: none;
           }
+          }
+        }
         // @media (min-width: 992px) and (max-width: 1051px) {
         //   font-size: 12px;
         //   padding:0;
@@ -222,6 +213,10 @@ header {
               transition: all 0.5s ease;
               &:hover {
                 background: rgba(0, 75, 75, 0.5);
+                .fz_header_svg {
+                  background: #04a5a7;
+                  border: 1px solid transparent;
+                }
                 .fz_text {
                   h3 {
                     color: #04a5a7;
@@ -325,7 +320,7 @@ header {
               }
               p {
                 font-size: 12px;margin: 0;
-                color: #DDDEDD;
+                color: #8d8d8d;
               }
             }
           }
@@ -343,8 +338,10 @@ header {
             width: 100%;
             display: flex;
             flex-direction: column;
+            border-left: 1px solid transparent;
             &:hover {
               background: rgba(0, 75, 75, 0.5);
+              border-left: 1px solid rgba(1, 251, 251, 0.202);
             }
             &:after {
               border-width: unset !important;
@@ -357,7 +354,7 @@ header {
               transition: all 0.5s ease;
             }
             p {
-              font-size: 12px;margin: 0;color: #DDDEDD;
+              font-size: 12px;margin: 0;color: #8d8d8d;
             }
           }
         }
