about_us images updated

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -306,7 +306,10 @@ header .navbar-expand-lg .navbar-nav > li .submenu a {
 header .navbar-expand-lg .navbar-nav > li .submenu li.active-submenu > a {
   background: rgba(0, 75, 75, 0.5);
 }
-header .navbar-expand-lg .navbar-nav > li .submenu li > a:after {
+header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover {
+  position: relative;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover:after {
   border-color: transparent transparent transparent rgba(62, 171, 144, 0.2);
   border-style: solid;
   border-width: 8px 0 8px 8px;
@@ -321,12 +324,9 @@ header .navbar-expand-lg .navbar-nav > li .submenu li > a:after {
   transition: all 0.5s ease;
 }
 @media screen and (max-width: 991px) {
-  header .navbar-expand-lg .navbar-nav > li .submenu li > a:after {
+  header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover:after {
     border-width: unset;
   }
-}
-header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover {
-  position: relative;
 }
 header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(5) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(6) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(7) > a:after, header .navbar-expand-lg .navbar-nav > li .submenu li:nth-child(8) > a:after {
   border-width: 0;
