--- a/assets/css/sass/about_us.scss
+++ b/assets/css/sass/about_us.scss
@@ -67,7 +67,7 @@
    
     .about_part{
         height: auto;
-        padding:50px 0px;
+        // padding:50px 0px;
         h5{
             color: $primary-color;
             font-size: 35px;
@@ -79,8 +79,8 @@
             }
         }
         .about_us_images{
-            // width: 400px;
-            // height: 400px;
+            width: 500px;
+            height: 500px;
             @media screen and (max-width: 991px) {
                 width: auto;
                 height: auto;
