--- a/assets/css/sass/contact_us.scss
+++ b/assets/css/sass/contact_us.scss
@@ -93,7 +93,7 @@
         }
         /* error message styles */
         .error {
-            color: #ED5B43;
+            color: red;
             font-size: 12px;
             padding: 0px;
             margin-bottom: -5px;
