--- a/assets/css/sass/login.scss
+++ b/assets/css/sass/login.scss
@@ -116,11 +116,11 @@
 
 .error {
     color: red;
+    font-size: 12px;
+    padding: 0px;
     display: inline-block;
     width: 100%;
     text-align: left;
-    padding: 5px 0px;
-    font-size: 12px;
 }
 .mandatory {
     color: red;
