--- a/assets/css/sass/features.scss
+++ b/assets/css/sass/features.scss
@@ -57,6 +57,11 @@
         background: transparent;
       }
     }
+
+    @media screen and (min-width: 1200px) and (max-width: 1399px) {
+      padding:0px 20px;
+    }
+
     @media screen and (max-width: 1600px) {
       height: 34rem;
     }
@@ -347,19 +352,15 @@
                             padding: 0px;
                             border-bottom-left-radius: 8px;
                             border-bottom-right-radius: 8px;
-                            // @media screen and (min-width: 1200px) and (max-width: 1400px) {
-                            //   font-size: 16px;
-                            //   line-height: 18px;
-                            //    }
-                            @media screen and (min-width: 390px) and (max-width: 420px) {
-                              padding:0 12px
-                            }
+                            @media screen and (max-width: 767px) {
+                              padding:0px 14px;
+                             }
                             h3 {
                                 color: $primary-color;
                                 font-size: 19.4px;
                                 font-weight: 500;
                                 line-height: 36px;
-                                @media screen and (max-width: 1199px) {
+                                @media screen and (max-width: 1399px) {
                                  font-size: 16px;
                                  line-height: 18px;
                                 }
