--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -176,6 +176,7 @@
   font-size: 18px;
   color: #C7DAD9;
   font-weight: 400;
+  margin: 0;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .footer_section .fz_footer_container .subscribe p {
