--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -165,6 +165,7 @@ p{
   font-size: 18px;
   color: #C7DAD9;
   font-weight: 400;
+  margin: 0;
   @media (min-width: 992px) and (max-width: 1199px) {
     text-align: center;
 }
